k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slacker
  namespace: slacker
spec:
  selector:
    app: slacker
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
